--- a/Website/Frontend/package.json
+++ b/Website/Frontend/package.json
@@ -12,12 +12,15 @@
     "@apollo/client": "^3.11.8",
     "@tailwindcss/postcss": "^4.1.13",
     "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "graphql": "^16.11.0",
+    "lucide-react": "^0.543.0",
     "next": "15.5.2",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "rxjs": "^7.8.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
