--- a/Website/Frontend/package.json
+++ b/Website/Frontend/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:optimize": "NODE_ENV=production next build",
     "start": "next start",
+    "start:production": "NODE_ENV=production next start -p 3000",
+    "analyze": "ANALYZE=true next build",
     "lint": "eslint"
   },
   "dependencies": {
